--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,14 @@
             android:layout_weight="1"
     />
 
+    <Button
+            android:id="@+id/btn_send"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SEND"
+            android:textSize="30sp"
+
+            android:layout_weight="1"
+    />
+
 </LinearLayout>
